--- a/src/components/TwoSumCard/twoSumCard.module.css
+++ b/src/components/TwoSumCard/twoSumCard.module.css
@@ -3,14 +3,47 @@
     padding: 5rem;
     margin: 0 auto;
     display: flex;
+    gap: 5px;
     flex-direction: column;
     border-radius: 15px;
     align-items: center;
     box-shadow: 6px 5px 25px -9px rgba(0, 0, 0, 0.38);
 }
 
+.header {
+    width: fit-content;
+}
+
 .arrayElements {
     display: flex;
     justify-content: center;
     gap: 4px;
+}
+
+.input {
+    width: 100%;
+    padding: 0.5rem;
+    border-radius: 5px;
+    border: 1px solid rgb(0, 0, 0);
+    font-size: 1.2rem;
+}
+
+.submit {
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    border: 1px solid rgb(0, 0, 0);
+    font-size: 1.2rem;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    transition: all 200ms ease-in-out;
+}
+
+.submit:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+.form {
+    display: flex;
+    gap: 5px;
 }
